2008-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
 include/pqxx/result.hxx, include/pqxx/strconv, include/pqxx/strconv.hxx,
 include/pqxx/util.hxx, src/Makefile.am, src/strconv.cxx, src/util.cxx:
  - Broke string conversion out into its own module
2008-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Restructured chapters for more balance
  - Made text less tedious in places
 include/pqxx/connection_base.hxx, src/connection_base.cxx, src/cursor.cxx,
 src/dbtransaction.cxx:
  - Added capability for read-only transactions
  - Added capability for cursor "fetch 0"
 include/pqxx/cursor.hxx, include/pqxx/tablewriter.hxx,
 include/pqxx/transaction_base.hxx:
  - Documented some more parameters to keep doxygen happy.
 include/pqxx/util.hxx:
  - Updated threading documentation
  - Created "getting started" page
  - Linked to threading & getting-started pages from front page
2008-12-27  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 debian/rules, debian/control:
 - Deal better with config.{sub,guess} files, thanks Roger Leigh.
 - Prepare for future 3.1 release, now Debian package builds correctly.
2008-12-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbstransaction.hxx, src/dbtransaction.cxx:
  - Use regular transaction if backend doesn't support read transactions
 src/binarystring.cxx:
  - Workaround for 7.3 libpq without PQunescape() still used m_str
  - Missing include for workaround
  - Use memcpy(), not strcpy() in workaround; there may be nul bytes
  - Fixed int-to-unsigned-char warnings in workaround
 src/util.cxx:
  - Missing include for workaround to missing PQfreemem()
  - Fixed const error in workaround
 tools/pqxx-fulltest:
  - Rearranged "find" options to silence warning.
2008-12-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/util.hxx, src/binarystring.cxx,
 src/connection_base.cxx: